docs/cobblemon-tags/1.6.1/BlocksTags.md
# Block Tags

This file contains tags related to block in cobblemon.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:all_hanging_signs</summary>

- #cobblemon:ceiling_hanging_signs
- #cobblemon:wall_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_signs</summary>

- #cobblemon:all_hanging_signs
- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ancient_city_blocks</summary>

- minecraft:chiseled_deepslate
- minecraft:cobbled_deepslate_wall
- minecraft:cracked_deepslate_bricks
- minecraft:cracked_deepslate_tiles
- minecraft:deepslate_brick_slab
- minecraft:deepslate_brick_stairs
- minecraft:deepslate_brick_wall
- minecraft:deepslate_bricks
- minecraft:deepslate_tile_slab
- minecraft:deepslate_tile_stairs
- minecraft:deepslate_tile_wall
- minecraft:deepslate_tiles
- minecraft:polished_basalt
- minecraft:polished_deepslate
- minecraft:polished_deepslate_slab
- minecraft:polished_deepslate_wall

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns</summary>

- cobblemon:black_apricorn
- cobblemon:blue_apricorn
- cobblemon:green_apricorn
- cobblemon:pink_apricorn
- cobblemon:red_apricorn
- cobblemon:white_apricorn
- cobblemon:yellow_apricorn

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_saplings</summary>

- cobblemon:black_apricorn_sapling
- cobblemon:blue_apricorn_sapling
- cobblemon:green_apricorn_sapling
- cobblemon:pink_apricorn_sapling
- cobblemon:red_apricorn_sapling
- cobblemon:white_apricorn_sapling
- cobblemon:yellow_apricorn_sapling

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berries</summary>

- cobblemon:aguav_berry
- cobblemon:apicot_berry
- cobblemon:aspear_berry
- cobblemon:babiri_berry
- cobblemon:belue_berry
- cobblemon:bluk_berry
- cobblemon:charti_berry
- cobblemon:cheri_berry
- cobblemon:chesto_berry
- cobblemon:chilan_berry
- cobblemon:chople_berry
- cobblemon:coba_berry
- cobblemon:colbur_berry
- cobblemon:cornn_berry
- cobblemon:custap_berry
- cobblemon:durin_berry
- cobblemon:enigma_berry
- cobblemon:figy_berry
- cobblemon:ganlon_berry
- cobblemon:grepa_berry
- cobblemon:haban_berry
- cobblemon:hondew_berry
- cobblemon:hopo_berry
- cobblemon:iapapa_berry
- cobblemon:jaboca_berry
- cobblemon:kasib_berry
- cobblemon:kebia_berry
- cobblemon:kee_berry
- cobblemon:kelpsy_berry
- cobblemon:lansat_berry
- cobblemon:leppa_berry
- cobblemon:liechi_berry
- cobblemon:lum_berry
- cobblemon:mago_berry
- cobblemon:magost_berry
- cobblemon:maranga_berry
- cobblemon:micle_berry
- cobblemon:nanab_berry
- cobblemon:nomel_berry
- cobblemon:occa_berry
- cobblemon:oran_berry
- cobblemon:pamtre_berry
- cobblemon:passho_berry
- cobblemon:payapa_berry
- cobblemon:pecha_berry
- cobblemon:persim_berry
- cobblemon:petaya_berry
- cobblemon:pinap_berry
- cobblemon:pomeg_berry
- cobblemon:qualot_berry
- cobblemon:rabuta_berry
- cobblemon:rawst_berry
- cobblemon:razz_berry
- cobblemon:rindo_berry
- cobblemon:roseli_berry
- cobblemon:rowap_berry
- cobblemon:salac_berry
- cobblemon:shuca_berry
- cobblemon:sitrus_berry
- cobblemon:spelon_berry
- cobblemon:starf_berry
- cobblemon:tamato_berry
- cobblemon:tanga_berry
- cobblemon:touga_berry
- cobblemon:wacan_berry
- cobblemon:watmel_berry
- cobblemon:wepear_berry
- cobblemon:wiki_berry
- cobblemon:yache_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_replaceable</summary>

- #minecraft:leaves
- minecraft:air
- minecraft:cave_air
- minecraft:dead_bush
- minecraft:fern
- minecraft:fire
- minecraft:glow_lichen
- minecraft:large_fern
- minecraft:light
- minecraft:snow
- minecraft:soul_fire
- minecraft:structure_void
- minecraft:tall_grass
- minecraft:vine
- minecraft:void_air

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_soil</summary>

- #c:farmland
- #c:farmlands
- aether:aether_farmland
- minecraft:farmland

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_wild_soil</summary>

- #cobblemon:snow_block
- #minecraft:dirt
- #minecraft:sand
- #minecraft:terracotta

</details>

<details>
<summary><b>Tag:</b> #cobblemon:black_tumblestones</summary>

- cobblemon:black_tumblestone_block
- cobblemon:black_tumblestone_brick_slab
- cobblemon:black_tumblestone_brick_stairs
- cobblemon:black_tumblestone_brick_wall
- cobblemon:black_tumblestone_bricks
- cobblemon:black_tumblestone_cluster
- cobblemon:chiseled_black_tumblestone_bricks
- cobblemon:chiseled_polished_black_tumblestone
- cobblemon:large_budding_black_tumblestone
- cobblemon:medium_budding_black_tumblestone
- cobblemon:polished_black_tumblestone
- cobblemon:polished_black_tumblestone_slab
- cobblemon:polished_black_tumblestone_stairs
- cobblemon:polished_black_tumblestone_wall
- cobblemon:small_budding_black_tumblestone
- cobblemon:smooth_black_tumblestone
- cobblemon:smooth_black_tumblestone_slab
- cobblemon:smooth_black_tumblestone_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:black_tumblestone_bricks</summary>

- cobblemon:black_tumblestone_bricks
- cobblemon:chiseled_black_tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:blue_flowers</summary>

- aether_redux:mixed_prismatic_petals
- aether_redux:pink_prismatic_petals
- aether_redux:teal_prismatic_petals
- biomesoplenty:blue_hydrangea
- biomesoplenty:blue_hydrangea_bottom
- biomesoplenty:blue_hydrangea_top
- biomesoplenty:icy_iris
- blue_skies:moonlit_bloom
- blue_skies:nightcress
- botania:blue_double_flower
- botania:blue_floating_flower
- botania:blue_mystical_flower
- botania:blue_shiny_flower
- botania:cyan_double_flower
- botania:cyan_floating_flower
- botania:cyan_mystical_flower
- botania:cyan_shiny_flower
- botania:floating_hydroangeas
- botania:floating_labellia
- botania:floating_manastar
- botania:floating_marimorphosis
- botania:floating_marimorphosis_chibi
- botania:floating_spectrolus
- botania:floating_tangleberrie
- botania:floating_tangleberrie_chibi
- botania:hydroangeas
- botania:hydroangeas_motif
- botania:labellia
- botania:light_blue_double_flower
- botania:light_blue_floating_flower
- botania:light_blue_mystical_flower
- botania:light_blue_shiny_flower
- botania:manastar
- botania:marimorphosis
- botania:marimorphosis_chibi
- botania:spectrolus
- botania:tangleberrie
- botania:tangleberrie_chibi
- etcetera:bouquet
- goodending:pastel_wildflowers
- goodending:twilight_wildflowers
- minecraft:blue_orchid
- minecraft:cornflower
- mythicbotany:aquapanthus
- mythicbotany:aquapanthus_floating
- mythicbotany:raindeletia
- mythicbotany:raindeletia_floating
- outer_end:azure_bud
- wilderwild:blue_giany_glory_of_the_snow

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ceiling_hanging_signs</summary>

- cobblemon:apricorn_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:concrete_blocks</summary>

- minecraft:black_concrete
- minecraft:blue_concrete
- minecraft:brown_concrete
- minecraft:cyan_concrete
- minecraft:gray_concrete
- minecraft:green_concrete
- minecraft:light_blue_concrete
- minecraft:light_gray_concrete
- minecraft:lime_concrete
- minecraft:magenta_concrete
- minecraft:orange_concrete
- minecraft:pink_concrete
- minecraft:purple_concrete
- minecraft:red_concrete
- minecraft:white_concrete
- minecraft:yellow_concrete

</details>

<details>
<summary><b>Tag:</b> #cobblemon:crops</summary>

- #cobblemon:mints
- cobblemon:medicinal_leek
- cobblemon:revival_herb
- cobblemon:vivichoke_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dawn_stone_ores</summary>

- cobblemon:dawn_stone_ore
- cobblemon:deepslate_dawn_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:desert_pyramid_blocks</summary>

- minecraft:chiseled_sandstone
- minecraft:cut_sandstone
- minecraft:orange_terracotta
- minecraft:sandstone
- minecraft:sandstone_slab
- minecraft:sandstone_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dripstone_growable</summary>

- cobblemon:dripstone_moon_stone_ore
- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dripstone_replaceables</summary>

- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dusk_stone_ores</summary>

- cobblemon:deepslate_dusk_stone_ore
- cobblemon:dusk_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:end_city_blocks</summary>

- minecraft:end_stone_bricks
- minecraft:purpur_block
- minecraft:purpur_pillar
- minecraft:purpur_slab
- minecraft:purpur_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_stone_blocks</summary>

- cobblemon:dawn_stone_block
- cobblemon:dusk_stone_block
- cobblemon:fire_stone_block
- cobblemon:ice_stone_block
- cobblemon:leaf_stone_block
- cobblemon:moon_stone_block
- cobblemon:shiny_stone_block
- cobblemon:sun_stone_block
- cobblemon:thunder_stone_block
- cobblemon:water_stone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fire_stone_ores</summary>

- cobblemon:deepslate_fire_stone_ore
- cobblemon:fire_stone_ore
- cobblemon:nether_fire_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- #c:flowers
- #cobblemon:small_flowers
- #minecraft:flowers
- aether_redux:mixed_prismatic_petals
- aether_redux:pink_prismatic_petals
- aether_redux:teal_prismatic_petals
- deep_aether:aerlavender
- deep_aether:enchanted_blossom
- deep_aether:golden_flower
- deep_aether:radiant_orchid
- deep_aether:tall_aerlavender
- etcetera:bouquet
- mythicbotany:aquapanthus
- mythicbotany:aquapanthus_floating
- mythicbotany:exoblaze
- mythicbotany:exoblaze_floating
- mythicbotany:feysythia
- mythicbotany:feysythia_floating
- mythicbotany:hellebore
- mythicbotany:hellebore_floating
- mythicbotany:petrunia
- mythicbotany:petrunia_floating
- mythicbotany:raindeletia
- mythicbotany:raindeletia_floating
- mythicbotany:wither_aconite
- mythicbotany:wither_aconite_floating
- twilightforest:thorn_rose

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fossil_machine_parts</summary>

- cobblemon:fossil_analyzer
- cobblemon:monitor
- cobblemon:restoration_tank

</details>

<details>
<summary><b>Tag:</b> #cobblemon:gemstones</summary>

- #c:amethyst_ores
- #c:diamond_ores
- #c:emerald_ores
- #c:peridot_ores
- #c:ruby_ores
- #c:sapphire_ores
- #c:topaz_ores
- #minecraft:crystal_sound_blocks
- #minecraft:diamond_ores
- #minecraft:emerald_ores
- minecraft:amethyst_block
- minecraft:budding_amethyst

</details>

<details>
<summary><b>Tag:</b> #cobblemon:gilded_chests</summary>

- cobblemon:black_gilded_chest
- cobblemon:blue_gilded_chest
- cobblemon:gilded_chest
- cobblemon:green_gilded_chest
- cobblemon:pink_gilded_chest
- cobblemon:white_gilded_chest
- cobblemon:yellow_gilded_chest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:glazed_terracotta_blocks</summary>

- minecraft:black_glazed_terracotta
- minecraft:blue_glazed_terracotta
- minecraft:brown_glazed_terracotta
- minecraft:cyan_glazed_terracotta
- minecraft:gray_glazed_terracotta
- minecraft:green_glazed_terracotta
- minecraft:light_blue_glazed_terracotta
- minecraft:light_gray_glazed_terracotta
- minecraft:lime_glazed_terracotta
- minecraft:magenta_glazed_terracotta
- minecraft:orange_glazed_terracotta
- minecraft:pink_glazed_terracotta
- minecraft:purple_glazed_terracotta
- minecraft:red_glazed_terracotta
- minecraft:white_glazed_terracotta
- minecraft:yellow_glazed_terracotta

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ice_stone_ores</summary>

- cobblemon:deepslate_ice_stone_ore
- cobblemon:ice_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:jungle_pyramid_blocks</summary>

- minecraft:chiseled_stone_bricks
- minecraft:cobblestone
- minecraft:cobblestone_stairs
- minecraft:mossy_cobblestone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaf_stone_ores</summary>

- cobblemon:deepslate_leaf_stone_ore
- cobblemon:leaf_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:machines</summary>

- cobblemon:fossil_analyzer
- cobblemon:healing_machine
- cobblemon:monitor
- cobblemon:pasture
- cobblemon:pc
- cobblemon:restoration_tank

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mansion_blocks</summary>

- minecraft:birch_planks
- minecraft:cobblestone_stairs
- minecraft:cobblestone_wall
- minecraft:dark_oak_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:medicinal_leek_plantable</summary>

- #minecraft:slabs
- minecraft:water

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mints</summary>

- cobblemon:blue_mint
- cobblemon:cyan_mint
- cobblemon:green_mint
- cobblemon:pink_mint
- cobblemon:red_mint
- cobblemon:white_mint

</details>

<details>
<summary><b>Tag:</b> #cobblemon:moon_stone_ores</summary>

- cobblemon:deepslate_moon_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:moon_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:natural</summary>

- #c:adamantite_ores
- #c:aetherium_ores
- #c:aluminum_ores
- #c:amethyst_blocks
- #c:amethyst_ores
- #c:ancient_debris
- #c:antimony_ores
- #c:aquarium_ores
- #c:asterite_ores
- #c:asteroid_asterite_ores
- #c:banglum_ores
- #c:basalt
- #c:bauxite_ores
- #c:bone_blocks
- #c:carmot_ores
- #c:certus_quartz_ores
- #c:cinnabar_ores
- #c:cobalt_ores
- #c:coral_blocks
- #c:dirt
- #c:end_stones
- #c:galaxium_ores
- #c:galena_ores
- #c:galena_ores
- #c:gravel
- #c:kyber_ores
- #c:lead_ores
- #c:lignite_coal_ores
- #c:lunum_ores
- #c:lutetium_ores
- #c:manganese_ores
- #c:meteor_metite_ores
- #c:metite_ores
- #c:midas_gold_ores
- #c:moon_lunum_ores
- #c:mozanite_ores
- #c:mythril_ores
- #c:natural_stones
- #c:nether_mycelium
- #c:netherrack
- #c:nickel_ores
- #c:nikolite_ores
- #c:ores
- #c:orichalcum_ores
- #c:osmium_ores
- #c:palladium_ores
- #c:peridot_ores
- #c:platinum_ores
- #c:prometheum_ores
- #c:pyrite_ores
- #c:quadrillum_ores
- #c:quartz_ores
- #c:raw_antimony_ores
- #c:raw_copper_ores
- #c:raw_gold_ores
- #c:raw_iridium_ores
- #c:raw_iron_ores
- #c:raw_lead_ores
- #c:raw_nickel_ores
- #c:raw_platinum_ores
- #c:raw_silver_ores
- #c:raw_tin_ores
- #c:raw_titanium_ores
- #c:raw_tungsten_ores
- #c:raw_uranium_ores
- #c:red_sandstones
- #c:ruby_ores
- #c:runite_ores
- #c:salt_ores
- #c:sand
- #c:sandstone
- #c:sandstones
- #c:sapphire_ores
- #c:sheldonite_ores
- #c:silver_ores
- #c:sodalite_ores
- #c:sphalerite_ores
- #c:starrite_ores
- #c:stellum_ores
- #c:stone
- #c:stormyx_ores
- #c:sulfur_ores
- #c:tantalite_ores
- #c:terracotta_blocks
- #c:tin_ores
- #c:titanium_ores
- #c:topaz_ores
- #c:truesilver_ores
- #c:tungsten_ores
- #c:unobtainium_ores
- #c:ur_ores
- #c:uranium_ores
- #c:vermiculite_ores
- #c:zinc_ores
- #minecraft:animals_spawnable_on
- #minecraft:base_stone_nether
- #minecraft:base_stone_overworld
- #minecraft:coal_ores
- #minecraft:copper_ores
- #minecraft:coral_blocks
- #minecraft:crystal_sound_blocks
- #minecraft:diamond_ores
- #minecraft:dirt
- #minecraft:emerald_ores
- #minecraft:gold_ores
- #minecraft:ice
- #minecraft:iron_ores
- #minecraft:lapis_ores
- #minecraft:nylium
- #minecraft:redstone_ores
- #minecraft:sand
- #minecraft:sculk_replaceable
- #minecraft:snow
- #minecraft:terracotta
- #minecraft:valid_spawn
- minecraft:big_dripleaf
- minecraft:lily_pad
- minecraft:moss_block
- minecraft:moss_carpet
- minecraft:sculk
- minecraft:snow_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:nether_structure_blocks</summary>

- minecraft:blackstone_slab
- minecraft:blackstone_stairs
- minecraft:blackstone_wall
- minecraft:chiseled_polished_blackstone
- minecraft:cracked_polished_blackstone_bricks
- minecraft:gilded_blackstone
- minecraft:nether_brick_fence
- minecraft:nether_brick_stairs
- minecraft:nether_bricks
- minecraft:polished_basalt
- minecraft:polished_blackstone_brick_stairs
- minecraft:polished_blackstone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ocean_ruin_blocks</summary>

- minecraft:chiseled_sandstone
- minecraft:chiseled_stone_bricks
- minecraft:cracked_stone_bricks
- minecraft:cut_sandstone
- minecraft:mossy_cobblestone
- minecraft:mossy_stone_bricks
- minecraft:polished_granite
- minecraft:stone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:orange_flowers</summary>

- aether_redux:aurum
- biomemakeover:marigold
- biomemakeover:moth_blossom
- biomesoplenty:burning_blossom
- biomesoplenty:orange_cosmos
- blue_skies:blaze_bud
- botania:entropinnyum
- botania:floating_entropinnyum
- botania:floating_pollidisiac
- botania:floating_spectrolus
- botania:floating_thermalily
- botania:floating_tigerseye
- botania:orange_double_flower
- botania:orange_floating_flower
- botania:orange_mystical_flower
- botania:orange_shiny_flower
- botania:pollidisiac
- botania:spectrolus
- botania:thermalily
- botania:tigerseye
- deep_aether:golden_flower
- goodending:spicy_wildflowers
- minecraft:orange_tulip
- minecraft:torchflower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pillager_outpost_blocks</summary>

- #minecraft:logs
- #minecraft:planks
- minecraft:cobblestone
- minecraft:cobblestone_slab
- minecraft:cobblestone_stairs
- minecraft:cobblestone_wall
- minecraft:dark_oak_fence
- minecraft:dark_oak_slab
- minecraft:dark_oak_stairs
- minecraft:mossy_cobblestone
- minecraft:mossy_cobblestone_slab
- minecraft:mossy_cobblestone_stairs
- minecraft:mossy_cobblestone_wall

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pink_flowers</summary>

- aether_redux:iridia
- aether_redux:mixed_prismatic_petals
- aether_redux:pink_prismatic_petals
- aether_redux:sweet_blossom
- ancient_aether:highland_viola
- biomemakeover:foxglove
- biomesoplenty:pink_daffodil
- biomesoplenty:pink_hibiscus
- biomesoplenty:wildflower
- blue_skies:blush_blossom
- blue_skies:briskbloom
- blue_skies:camellia
- blue_skies:midday_bayhop
- botania:floating_hyacidus
- botania:floating_jaded_amaranthus
- botania:floating_jiyuulia
- botania:floating_jiyuulia_chibi
- botania:floating_marimorphosis
- botania:floating_marimorphosis_chibi
- botania:floating_rafflowsia
- botania:floating_rosa_arcana
- botania:hyacidus
- botania:jaded_amaranthus
- botania:jiyuulia
- botania:jiyuulia_chibi
- botania:magenta_double_flower
- botania:magenta_floating_flower
- botania:magenta_mystical_flower
- botania:magenta_shiny_flower
- botania:marimorphosis
- botania:marimorphosis_chibi
- botania:pink_double_flower
- botania:pink_floating_flower
- botania:pink_mystical_flower
- botania:pink_shiny_flower
- botania:rafflowsia
- botania:rosa_arcana
- deep_aether:aerlavender
- deep_aether:radiant_orchid
- deep_aether:tall_aerlavender
- enlightened_end:open_odd_roots
- etcetera:bouquet
- farmersdelight:wild_onions
- minecraft:allium
- minecraft:lilac
- minecraft:peony
- minecraft:pink_tulip
- overweight_farming:allium_bush

</details>

<details>
<summary><b>Tag:</b> #cobblemon:redstone_blocks</summary>

- #c:redstone_blocks
- minecraft:activator_rail
- minecraft:comparator
- minecraft:daylight_detector
- minecraft:detector_rail
- minecraft:dispenser
- minecraft:dropper
- minecraft:hopper
- minecraft:observer
- minecraft:piston
- minecraft:powered_rail
- minecraft:redstone_block
- minecraft:redstone_lamp
- minecraft:redstone_torch
- minecraft:redstone_wire
- minecraft:repeater
- minecraft:sticky_piston

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_flowers</summary>

- ancient_aether:sakura_blossoms
- ancient_aether:trapped_sakura_blossoms
- biomesoplenty:rose
- blue_skies:flare_floret
- botania:bellethorn
- botania:bellethorn_chibi
- botania:exoflame
- botania:floating_bellethorn
- botania:floating_bellethorn_chibi
- botania:floating_exoflame
- botania:floating_kekimurus
- botania:floating_manastar
- botania:floating_munchdew
- botania:floating_orechid_ignem
- botania:floating_pollidisiac
- botania:floating_spectrolus
- botania:kekimurus
- botania:manastar
- botania:munchdew
- botania:orechid_ignem
- botania:pollidisiac
- botania:red_double_flower
- botania:red_floating_flower
- botania:red_mystical_flower
- botania:red_shiny_flower
- botania:spectrolus
- etcetera:bouquet
- goodending:balmy_wildflowers
- minecraft:poppy
- minecraft:red_tulip
- minecraft:rose_bush
- mythicbotany:petrunia
- mythicbotany:petrunia_floating
- twilightforest:thorn_rose
- wilderwild:milkweed

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_tumblestones</summary>

- cobblemon:chiseled_polished_tumblestone
- cobblemon:chiseled_tumblestone_bricks
- cobblemon:large_budding_tumblestone
- cobblemon:medium_budding_tumblestone
- cobblemon:polished_tumblestone
- cobblemon:polished_tumblestone_slab
- cobblemon:polished_tumblestone_stairs
- cobblemon:polished_tumblestone_wall
- cobblemon:small_budding_tumblestone
- cobblemon:smooth_tumblestone
- cobblemon:smooth_tumblestone_slab
- cobblemon:smooth_tumblestone_stairs
- cobblemon:tumblestone_block
- cobblemon:tumblestone_brick_slab
- cobblemon:tumblestone_brick_stairs
- cobblemon:tumblestone_brick_wall
- cobblemon:tumblestone_bricks
- cobblemon:tumblestone_cluster

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_tumblestone_bricks</summary>

- cobblemon:chiseled_tumblestone_bricks
- cobblemon:tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:roots</summary>

- cobblemon:big_root
- cobblemon:energy_root

</details>

<details>
<summary><b>Tag:</b> #cobblemon:roots_spreadable</summary>

- #c:cobblestone
- #c:dirt
- #c:stone
- #forge:cobblestone/deepslate
- #forge:cobblestone/infested
- #forge:cobblestone/mossy
- #forge:cobblestone/normal
- #forge:stone
- #minecraft:dirt
- minecraft:andesite
- minecraft:cobbled_deepslate
- minecraft:cobblestone
- minecraft:deepslate
- minecraft:diorite
- minecraft:granite
- minecraft:infested_cobblestone
- minecraft:infested_deepslate
- minecraft:infested_stone
- minecraft:mossy_cobblestone
- minecraft:stone
- minecraft:tuff

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ruined_portal_blocks</summary>

- minecraft:crying_obsidian
- minecraft:netherrack
- minecraft:obsidian

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sees_sky</summary>

- #minecraft:climbable
- #minecraft:fences
- #minecraft:leaves
- #minecraft:replaceable
- minecraft:ice

</details>

<details>
<summary><b>Tag:</b> #cobblemon:shiny_stone_ores</summary>

- cobblemon:deepslate_shiny_stone_ore
- cobblemon:shiny_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:standing_signs
- #cobblemon:wall_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sky_tumblestones</summary>

- cobblemon:chiseled_polished_sky_tumblestone
- cobblemon:chiseled_sky_tumblestone_bricks
- cobblemon:large_budding_sky_tumblestone
- cobblemon:medium_budding_sky_tumblestone
- cobblemon:polished_sky_tumblestone
- cobblemon:polished_sky_tumblestone_slab
- cobblemon:polished_sky_tumblestone_stairs
- cobblemon:polished_sky_tumblestone_wall
- cobblemon:sky_tumblestone_block
- cobblemon:sky_tumblestone_brick_slab
- cobblemon:sky_tumblestone_brick_stairs
- cobblemon:sky_tumblestone_brick_wall
- cobblemon:sky_tumblestone_bricks
- cobblemon:sky_tumblestone_cluster
- cobblemon:small_budding_sky_tumblestone
- cobblemon:smooth_sky_tumblestone
- cobblemon:smooth_sky_tumblestone_slab
- cobblemon:smooth_sky_tumblestone_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sky_tumblestone_bricks</summary>

- cobblemon:chiseled_sky_tumblestone_bricks
- cobblemon:sky_tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:small_flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:snow_block</summary>

- minecraft:snow_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:standing_signs</summary>

- cobblemon:apricorn_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sun_stone_ores</summary>

- cobblemon:deepslate_sun_stone_ore
- cobblemon:sun_stone_ore
- cobblemon:terracotta_sun_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:thunder_stone_ores</summary>

- cobblemon:deepslate_thunder_stone_ore
- cobblemon:thunder_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:trail_ruins_blocks</summary>

- #cobblemon:glazed_terracotta_blocks
- #minecraft:terracotta
- minecraft:bricks
- minecraft:mud_bricks
- minecraft:suspicious_gravel

</details>

<details>
<summary><b>Tag:</b> #cobblemon:trash</summary>

- etcetera:prickly_can
- farmersdelight:organic_compost
- manatrashcan:mana_trashcan
- minecraft:composter
- nethersdelight:soul_compost
- overweight_farming:vegetable_compost
- rats:compressed_garbage
- rats:cursed_garbage
- rats:garbage_pile
- rats:pied_garbage
- rats:purified_garbage
- rats:trash_can
- trashcans:energy_trash_can
- trashcans:item_trash_can
- trashcans:liquid_trash_can
- trashcans:ultimate_trash_can

</details>

<details>
<summary><b>Tag:</b> #cobblemon:trees</summary>

- #c:leaves
- #c:logs
- #minecraft:leaves
- #minecraft:logs
- #minecraft:overworld_natural_logs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tumblestone_bricks</summary>

- #cobblemon:black_tumblestone_bricks
- #cobblemon:red_tumblestone_bricks
- #cobblemon:sky_tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tumblestone_heat_source</summary>

- minecraft:lava
- minecraft:magma_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_hanging_signs</summary>

- cobblemon:apricorn_wall_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_signs</summary>

- cobblemon:apricorn_wall_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:water_stone_ores</summary>

- cobblemon:deepslate_water_stone_ore
- cobblemon:water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:white_flowers</summary>

- aether:white_flower
- aether_redux:frostbud
- aether_redux:gilded_white_flower
- biomemakeover:buttonbush
- biomesoplenty:glowflower
- blue_skies:crystal_flower
- blue_skies:snowbloom
- botania:dandelifeon
- botania:fallen_kanade
- botania:floating_dandelifeon
- botania:floating_fallen_kanade
- botania:floating_kekimurus
- botania:floating_pure_daisy
- botania:floating_spectranthemum
- botania:floating_spectrolus
- botania:kekimurus
- botania:pure_daisy
- botania:spectranthemum
- botania:spectrolus
- botania:white_double_flower
- botania:white_floating_flower
- botania:white_mystical_flower
- botania:white_shiny_flower
- cobblemon:pep_up_flower
- deep_aether:enchanted_blossom
- farmersdelight:wild_carrots
- minecraft:azure_bluet
- minecraft:lily_of_the_valley
- minecraft:oxeye_daisy
- minecraft:white_tulip
- miners_delight:gossypium
- miners_delight:wild_cave_carrots
- wilderwild:alba_giany_glory_of_the_snow
- wilderwild:datura

</details>

<details>
<summary><b>Tag:</b> #cobblemon:yellow_flowers</summary>

- biomesoplenty:goldenrod
- botania:daffomill
- botania:endoflame
- botania:floating_daffomill
- botania:floating_endoflame
- botania:floating_gourmaryllis
- botania:floating_labellia
- botania:floating_marimorphosis
- botania:floating_marimorphosis_chibi
- botania:floating_rafflowsia
- botania:floating_solegnolia
- botania:floating_solegnolia_chibi
- botania:floating_spectrolus
- botania:gourmaryllis
- botania:labellia
- botania:marimorphosis
- botania:marimorphosis_chibi
- botania:rafflowsia
- botania:solegnolia
- botania:solegnolia_chibi
- botania:spectrolus
- botania:yellow_double_flower
- botania:yellow_floating_flower
- botania:yellow_mystical_flower
- botania:yellow_shiny_flower
- etcetera:bouquet
- farmersdelight:wild_cabbages
- goodending:balmy_wildflowers
- goodending:pastel_wildflowers
- minecraft:dandelion
- minecraft:sunflower
- mythicbotany:feysythia
- mythicbotany:feysythia_floating

</details>

<details>
<summary><b>Tag:</b> #cobblemon:acacia_log</summary>

- #c:tree/savanna
- biomesoplenty:amethyst_canyon
- biomesoplenty:amethyst_rainforest
- biomesoplenty:lush_desert
- byg:araucaria_savanna
- byg:baobab_savanna
- byg:black_forest
- minecraft:savanna
- minecraft:savanna_plateau
- minecraft:windswept_savanna
- terralith:arid_highlands
- terralith:ashen_savanna
- terralith:fractured_savanna
- terralith:hot_shrubland
- terralith:moonlight_grove
- terralith:moonlight_valley
- terralith:savanna_badlands
- terralith:savanna_slopes
- wythers:bamboo_jungle_canyon
- wythers:bamboo_jungle_highlands
- wythers:bamboo_jungle_swamp
- wythers:bayou
- wythers:dry_savanna
- wythers:dry_tropical_forest
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle
- wythers:eucalyptus_jungle_canyon
- wythers:eucalyptus_salubris_woodland
- wythers:flooded_jungle
- wythers:flooded_rainforest
- wythers:flooded_savanna
- wythers:flowering_platanal
- wythers:huangshan_highlands
- wythers:humid_tropical_grassland
- wythers:jacaranda_savanna
- wythers:jungle_canyon
- wythers:jungle_island
- wythers:lapacho_plains
- wythers:mediterranean_island
- wythers:mediterranean_island_thermal_spring
- wythers:mushroom_island
- wythers:pantanal
- wythers:sakura_forest
- wythers:savanna_badlands
- wythers:scrub_forest
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tropical_rainforest
- wythers:tsingy_forest
- wythers:wooded_desert
- wythers:wooded_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_log</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_forest
- #cobblemon:is_grassland
- #cobblemon:is_hills
- #cobblemon:is_jungle
- #cobblemon:is_snowy_forest
- #cobblemon:is_swamp
- #cobblemon:is_taiga
- #cobblemon:is_tundra
- minecraft:sparse_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:birch_log</summary>

- #c:is_birch_forest
- #clifftree:birch_forests
- biomesoplenty:aspen_glade
- biomesoplenty:auroral_garden
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- byg:aspen_forest
- byg:autumnal_forest
- byg:borealis_grove
- byg:howling_peaks
- byg:temperate_grove
- clifftree:bog
- minecraft:birch_forest
- minecraft:flower_forest
- minecraft:forest
- minecraft:old_growth_birch_forest
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:birch_taiga
- terralith:blooming_valley
- terralith:cloud_forest
- terralith:haze_mountain
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:lush_valley
- terralith:orchid_swamp
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:shield
- terralith:temperate_highlands
- terralith:white_cliffs
- terralith:yosemite_lowlands
- wythers:aspen_crags
- wythers:autumnal_birch_forest
- wythers:autumnal_flower_forest
- wythers:autumnal_forest
- wythers:autumnal_forest_edge
- wythers:birch_swamp
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:cool_forest
- wythers:cool_forest_edge
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle
- wythers:eucalyptus_jungle_canyon
- wythers:eucalyptus_woodland
- wythers:sparse_eucalyptus_jungle
- wythers:sparse_eucalyptus_woodland
- wythers:temperate_island
- wythers:thermal_taiga
- wythers:thermal_taiga_crags
- wythers:warm_birch_forest
- wythers:waterlily_swamp
- wythers:windswept_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cherry_log</summary>

- minecraft:cherry_grove
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:snowy_cherry_grove

</details>

<details>
<summary><b>Tag:</b> #cobblemon:crimson_log</summary>

- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- byg:crimson_gardens
- gardens_of_the_dead:whistling_woods
- minecraft:crimson_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dark_oak_log</summary>

- biomesoplenty:mystic_grove
- biomesoplenty:pumpkin_patch
- biomesoplenty:seasonal_forest
- byg:coconino_meadow
- byg:temperate_rainforest
- minecraft:dark_forest
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:mirage_isles
- terralith:temperate_highlands
- wythers:ancient_moss_forest
- wythers:ancient_mossy_swamp
- wythers:dry_tropical_forest
- wythers:flooded_savanna
- wythers:highland_tropical_rainforest
- wythers:humid_tropical_grassland
- wythers:jungle_canyon
- wythers:pantanal
- wythers:phantasmal_forest
- wythers:phantasmal_swamp
- wythers:sparse_bamboo_jungle
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tsingy_forest
- wythers:waterlily_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowering_azalea_leaves</summary>

- minecraft:lush_caves
- terralith:amethyst_canyon
- terralith:amethyst_rainforest
- terralith:blooming_valley
- terralith:desert_oasis
- terralith:desert_spires
- terralith:red_oasis
- terralith:sandstone_valley
- wythers:ancient_mossy_swamp
- wythers:flooded_jungle
- wythers:flooded_rainforest
- wythers:flowering_platanal
- wythers:jacaranda_savanna
- wythers:lush_shroom_cave
- wythers:mossy_cave
- wythers:pantanal
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest
- wythers:tsingy_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:gravel</summary>

- biomesoplenty:cold_desert
- clifftree:gravelly_beach
- minecraft:windswept_gravelly_hills
- terralith:gravel_beach
- terralith:gravel_desert
- wythers:gravelly_beach
- wythers:gravelly_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:jungle_log</summary>

- #c:tree/jungle
- #minecraft:is_jungle
- biomesoplenty:fungal_jungle
- biomesoplenty:rainforest
- byg:crag_gardens
- terralith:jungle_mountains
- terralith:rocky_jungle
- terralith:tropical_jungle
- wythers:bamboo_jungle_swamp
- wythers:desert_island
- wythers:desert_lake
- wythers:desert_river
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle
- wythers:eucalyptus_jungle_canyon
- wythers:flooded_jungle
- wythers:flooded_rainforest
- wythers:flowering_platanal
- wythers:humid_tropical_grassland
- wythers:jacaranda_savanna
- wythers:jungle_island
- wythers:lapacho_plains
- wythers:mushroom_island
- wythers:pantanal
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle
- wythers:sparse_eucalyptus_jungle
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mangrove_log</summary>

- minecraft:mangrove_swamp
- terralith:cave/underground_jungle
- wythers:coastal_mangrove
- wythers:dry_tropical_forest
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle
- wythers:eucalyptus_jungle_canyon
- wythers:flooded_savanna
- wythers:forbidden_forest
- wythers:highland_tropical_rainforest
- wythers:jungle_canyon
- wythers:jungle_island
- wythers:mushroom_island
- wythers:sparse_eucalyptus_jungle
- wythers:tangled_forest
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mud</summary>

- clifftree:bog
- minecraft:mangrove_swamp
- terralith:cave/underground_jungle
- wythers:coastal_mangrove
- wythers:dripleaf_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:oak_log</summary>

- biomesoplenty:bamboo_grove
- biomesoplenty:cherry_blossom_grove
- biomesoplenty:dead_forest
- biomesoplenty:dryland
- biomesoplenty:floodplain
- biomesoplenty:lavender_forest
- biomesoplenty:maple_woods
- biomesoplenty:muskeg
- biomesoplenty:mystic_grove
- biomesoplenty:old_growth_woodland
- biomesoplenty:orchard
- biomesoplenty:origin_valley
- biomesoplenty:prairie
- biomesoplenty:seasonal_forest
- biomesoplenty:snowy_maple_woods
- biomesoplenty:woodland
- byg:autumnal_forest
- byg:coconino_meadow
- byg:mojave_desert
- byg:orchard
- byg:prairie
- byg:red_oak_forest
- byg:temperate_rainforest
- byg:white_mangrove_marshes
- clifftree:sparse_forest
- minecraft:flower_forest
- minecraft:forest
- minecraft:swamp
- minecraft:windswept_forest
- minecraft:wooded_badlands
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:birch_taiga
- terralith:blooming_valley
- terralith:desert_oasis
- terralith:desert_spires
- terralith:forested_highlands
- terralith:fractured_savanna
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:lush_valley
- terralith:mirage_isles
- terralith:red_oasis
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:sandstone_valley
- terralith:shrubland
- terralith:temperate_highlands
- wythers:ancient_emerald_beech_forest
- wythers:ancient_golden_beech_forest
- wythers:ancient_oak_swamp
- wythers:ancient_tropical_beech_forest
- wythers:autumnal_flower_forest
- wythers:autumnal_forest
- wythers:autumnal_forest_edge
- wythers:autumnal_swamp
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:boreal_forest_yellow
- wythers:cool_forest
- wythers:cool_forest_edge
- wythers:dry_tropical_forest
- wythers:flooded_temperate_rainforest
- wythers:flowering_platanal
- wythers:forbidden_forest
- wythers:forest_edge
- wythers:highland_tropical_rainforest
- wythers:humid_tropical_grassland
- wythers:jacaranda_savanna
- wythers:jungle_canyon
- wythers:jungle_island
- wythers:lapacho_plains
- wythers:larch_taiga
- wythers:maple_mountains
- wythers:mushroom_island
- wythers:sandy_jungle
- wythers:savanna_badlands
- wythers:sparse_bamboo_jungle
- wythers:spring_flower_forest
- wythers:subtropical_forest
- wythers:subtropical_forest_edge
- wythers:tangled_forest
- wythers:temperate_island
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:tropical_forest
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tropical_rainforest
- wythers:tsingy_forest
- wythers:windswept_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_sand</summary>

- #minecraft:is_badlands
- byg:atacama_desert
- byg:red_rock_valley
- terralith:ancient_sands
- terralith:arid_highlands
- terralith:bryce_canyon
- terralith:painted_mountains
- terralith:red_oasis
- wythers:ayers_rock
- wythers:badlands_desert
- wythers:badlands_jungle_canyon
- wythers:billabong
- wythers:kwongan_heath
- wythers:outback
- wythers:outback_desert
- wythers:red_desert
- wythers:red_rock_canyon
- wythers:wooded_badlands

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sand</summary>

- byg:mojave_desert
- clifftree:oasis
- clifftree:shrubland
- minecraft:desert
- terralith:ancient_sands
- terralith:cave/desert_caves
- terralith:desert_canyon
- terralith:desert_oasis
- terralith:desert_spires
- terralith:lush_desert
- terralith:sandstone_valley
- terralith:white_mesa
- wythers:cactus_desert
- wythers:deep_desert
- wythers:desert_island
- wythers:desert_pinnacles
- wythers:guelta
- wythers:sand_dunes
- wythers:sandy_jungle
- wythers:wooded_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:spruce_log</summary>

- biomesoplenty:dead_forest
- biomesoplenty:field
- biomesoplenty:forested_field
- biomesoplenty:hot_springs
- biomesoplenty:jade_cliffs
- biomesoplenty:maple_woods
- biomesoplenty:mediterranean_forest
- biomesoplenty:snowy_maple_woods
- biomesoplenty:wetland
- byg:autumnal_taiga
- byg:autumnal_valley
- byg:borealis_grove
- byg:canadian_shield
- byg:coniferous_forest
- byg:frosted_coniferous_forest
- byg:frosted_taiga
- byg:howling_peaks
- byg:rose_fields
- byg:weeping_witch_forest
- clifftree:bog
- clifftree:snowy_old_growth_taiga
- minecraft:grove
- minecraft:old_growth_pine_taiga
- minecraft:old_growth_spruce_taiga
- minecraft:snowy_taiga
- minecraft:taiga
- minecraft:windswept_forest
- terralith:alpine_grove
- terralith:alpine_highlands
- terralith:bryce_canyon
- terralith:cloud_forest
- terralith:cold_shrubland
- terralith:forested_highlands
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:lush_valley
- terralith:rocky_shrubland
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:shield
- terralith:siberian_grove
- terralith:siberian_taiga
- terralith:snowy_maple_forest
- terralith:snowy_shield
- terralith:wintry_forest
- terralith:wintry_lowlands
- terralith:yellowstone
- terralith:yosemite_lowlands
- wythers:ancient_taiga
- wythers:bamboo_jungle_canyon
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:cold_island
- wythers:cool_forest
- wythers:cool_forest_edge
- wythers:deep_snowy_taiga
- wythers:fen
- wythers:flooded_temperate_rainforest
- wythers:forested_highlands
- wythers:giant_sequoia_forest
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:larch_taiga
- wythers:maple_mountains
- wythers:old_growth_taiga_crags
- wythers:old_growth_taiga_swamp
- wythers:pine_barrens
- wythers:snowy_fen
- wythers:snowy_peaks
- wythers:snowy_thermal_taiga
- wythers:taiga_crags
- wythers:temperate_island
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga
- wythers:thermal_taiga_crags
- wythers:windswept_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:warped_log</summary>

- betternether:old_warped_woods
- byg:crimson_gardens
- byg:wailing_garth
- byg:warped_desert
- minecraft:warped_forest
- wythers:deep_dark_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_hanging_signs</summary>

- #cobblemon:all_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_signs</summary>

- #cobblemon:all_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:bee_growables</summary>

- #cobblemon:apricorns
- #cobblemon:crops

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ceiling_hanging_signs</summary>

- #cobblemon:ceiling_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:drip_stone_replaceables</summary>

- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fence_gates</summary>

- cobblemon:apricorn_fence_gate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:guarded_by_piglins</summary>

- cobblemon:black_gilded_chest
- cobblemon:blue_gilded_chest
- cobblemon:gilded_chest
- cobblemon:green_gilded_chest
- cobblemon:pink_gilded_chest
- cobblemon:relic_coin_pouch
- cobblemon:relic_coin_sack
- cobblemon:white_gilded_chest
- cobblemon:yellow_gilded_chest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hoes</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs</summary>

- #cobblemon:apricorn_logs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs_that_burn</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:maintains_farmland</summary>

- #cobblemon:berries
- #cobblemon:crops

</details>

<details>
<summary><b>Tag:</b> #cobblemon:needs_iron_tool</summary>

- cobblemon:deepslate_dawn_stone_ore
- cobblemon:deepslate_dusk_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:deepslate_ice_stone_ore
- cobblemon:deepslate_leaf_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:deepslate_shiny_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:deepslate_thunder_stone_ore
- cobblemon:deepslate_water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:needs_stone_tool</summary>

- cobblemon:dawn_stone_block
- cobblemon:dawn_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:dusk_stone_block
- cobblemon:dusk_stone_ore
- cobblemon:fire_stone_block
- cobblemon:fire_stone_ore
- cobblemon:ice_stone_block
- cobblemon:ice_stone_ore
- cobblemon:leaf_stone_block
- cobblemon:leaf_stone_ore
- cobblemon:moon_stone_block
- cobblemon:moon_stone_ore
- cobblemon:shiny_stone_block
- cobblemon:shiny_stone_ore
- cobblemon:sun_stone_block
- cobblemon:sun_stone_ore
- cobblemon:thunder_stone_block
- cobblemon:thunder_stone_ore
- cobblemon:water_stone_block
- cobblemon:water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:planks</summary>

- cobblemon:apricorn_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:saplings</summary>

- cobblemon:black_apricorn_sapling
- cobblemon:blue_apricorn_sapling
- cobblemon:green_apricorn_sapling
- cobblemon:pink_apricorn_sapling
- cobblemon:red_apricorn_sapling
- cobblemon:white_apricorn_sapling
- cobblemon:yellow_apricorn_sapling

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:slabs</summary>

- cobblemon:black_tumblestone_brick_slab
- cobblemon:polished_black_tumblestone_slab
- cobblemon:polished_sky_tumblestone_slab
- cobblemon:polished_tumblestone_slab
- cobblemon:sky_tumblestone_brick_slab
- cobblemon:smooth_black_tumblestone_slab
- cobblemon:smooth_sky_tumblestone_slab
- cobblemon:smooth_tumblestone_slab
- cobblemon:tumblestone_brick_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:small_flowers</summary>

- #cobblemon:small_flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:stairs</summary>

- cobblemon:black_tumblestone_brick_stairs
- cobblemon:polished_black_tumblestone_stairs
- cobblemon:polished_sky_tumblestone_stairs
- cobblemon:polished_tumblestone_stairs
- cobblemon:sky_tumblestone_brick_stairs
- cobblemon:smooth_black_tumblestone_stairs
- cobblemon:smooth_sky_tumblestone_stairs
- cobblemon:smooth_tumblestone_stairs
- cobblemon:tumblestone_brick_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:standing_signs</summary>

- #cobblemon:standing_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:walls</summary>

- cobblemon:black_tumblestone_brick_wall
- cobblemon:polished_black_tumblestone_wall
- cobblemon:polished_sky_tumblestone_wall
- cobblemon:polished_tumblestone_wall
- cobblemon:sky_tumblestone_brick_wall
- cobblemon:tumblestone_brick_wall

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_hanging_signs</summary>

- #cobblemon:wall_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_signs</summary>

- #cobblemon:wall_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_buttons</summary>

- cobblemon:apricorn_button

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_doors</summary>

- cobblemon:apricorn_door

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_pressure_plates</summary>

- cobblemon:apricorn_pressure_plate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_slabs</summary>

- cobblemon:apricorn_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_stairs</summary>

- cobblemon:apricorn_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_trapdoors</summary>

- cobblemon:apricorn_trapdoor

</details>

<details>
<summary><b>Tag:</b> #cobblemon:axe</summary>

- #cobblemon:apricorns
- cobblemon:black_gilded_chest
- cobblemon:blue_gilded_chest
- cobblemon:gilded_chest
- cobblemon:gimmighoul_chest
- cobblemon:green_gilded_chest
- cobblemon:lectern
- cobblemon:pasture
- cobblemon:pink_gilded_chest
- cobblemon:white_gilded_chest
- cobblemon:yellow_gilded_chest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hoe</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pickaxe</summary>

- cobblemon:black_tumblestone_block
- cobblemon:black_tumblestone_brick_slab
- cobblemon:black_tumblestone_brick_stairs
- cobblemon:black_tumblestone_brick_wall
- cobblemon:black_tumblestone_bricks
- cobblemon:black_tumblestone_cluster
- cobblemon:chiseled_black_tumblestone_bricks
- cobblemon:chiseled_polished_black_tumblestone
- cobblemon:chiseled_polished_sky_tumblestone
- cobblemon:chiseled_polished_tumblestone
- cobblemon:chiseled_sky_tumblestone_bricks
- cobblemon:chiseled_tumblestone_bricks
- cobblemon:dawn_stone_block
- cobblemon:dawn_stone_ore
- cobblemon:deepslate_dawn_stone_ore
- cobblemon:deepslate_dusk_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:deepslate_ice_stone_ore
- cobblemon:deepslate_leaf_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:deepslate_shiny_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:deepslate_thunder_stone_ore
- cobblemon:deepslate_water_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:dusk_stone_block
- cobblemon:dusk_stone_ore
- cobblemon:fire_stone_block
- cobblemon:fire_stone_ore
- cobblemon:fossil_analyzer
- cobblemon:healing_machine
- cobblemon:ice_stone_block
- cobblemon:ice_stone_ore
- cobblemon:large_budding_black_tumblestone
- cobblemon:large_budding_sky_tumblestone
- cobblemon:large_budding_tumblestone
- cobblemon:leaf_stone_block
- cobblemon:leaf_stone_ore
- cobblemon:medium_budding_black_tumblestone
- cobblemon:medium_budding_sky_tumblestone
- cobblemon:medium_budding_tumblestone
- cobblemon:monitor
- cobblemon:moon_stone_block
- cobblemon:moon_stone_ore
- cobblemon:nether_fire_stone_ore
- cobblemon:pc
- cobblemon:polished_black_tumblestone
- cobblemon:polished_black_tumblestone_slab
- cobblemon:polished_black_tumblestone_stairs
- cobblemon:polished_black_tumblestone_wall
- cobblemon:polished_sky_tumblestone
- cobblemon:polished_sky_tumblestone_slab
- cobblemon:polished_sky_tumblestone_stairs
- cobblemon:polished_sky_tumblestone_wall
- cobblemon:polished_tumblestone
- cobblemon:polished_tumblestone_slab
- cobblemon:polished_tumblestone_stairs
- cobblemon:polished_tumblestone_wall
- cobblemon:restoration_tank
- cobblemon:shiny_stone_block
- cobblemon:shiny_stone_ore
- cobblemon:sky_tumblestone_block
- cobblemon:sky_tumblestone_brick_slab
- cobblemon:sky_tumblestone_brick_stairs
- cobblemon:sky_tumblestone_brick_wall
- cobblemon:sky_tumblestone_bricks
- cobblemon:sky_tumblestone_cluster
- cobblemon:small_budding_black_tumblestone
- cobblemon:small_budding_sky_tumblestone
- cobblemon:small_budding_tumblestone
- cobblemon:smooth_black_tumblestone
- cobblemon:smooth_black_tumblestone_slab
- cobblemon:smooth_black_tumblestone_stairs
- cobblemon:smooth_sky_tumblestone
- cobblemon:smooth_sky_tumblestone_slab
- cobblemon:smooth_sky_tumblestone_stairs
- cobblemon:smooth_tumblestone
- cobblemon:smooth_tumblestone_slab
- cobblemon:smooth_tumblestone_stairs
- cobblemon:sun_stone_block
- cobblemon:sun_stone_ore
- cobblemon:terracotta_sun_stone_ore
- cobblemon:thunder_stone_block
- cobblemon:thunder_stone_ore
- cobblemon:tumblestone_block
- cobblemon:tumblestone_brick_slab
- cobblemon:tumblestone_brick_stairs
- cobblemon:tumblestone_brick_wall
- cobblemon:tumblestone_bricks
- cobblemon:tumblestone_cluster
- cobblemon:water_stone_block
- cobblemon:water_stone_ore

</details>
